# jsondb-cli

./: .gitignore  EXIT_CODES.md  Format.md  README.md  dev-requirements.txt  pyproject.toml  spec.json
jsondb/: __main__.py  model.py  version.py
